typed-i18n/tests/compile-fail/language_not_known.lrc
# hello
en Hello
se Hej
